--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -179,7 +179,7 @@
 }
 
 /* Mobile */
-@media (max-width: 700px) {
+@media (max-width: 680px) {
   .main h1 {
     font-size: var(--heading-size-2);
   }
